添加位翻转热力图分析工具和测试数据
- 新增 quick_heatmap.py: 快速生成位翻转散点图的工具
- 新增 explain_column_calc.py: 列地址计算逻辑解释脚本
- 新增多个位翻转测试数据文件(JSON/CSV格式)
- 新增自动生成的热力图文件(PNG格式)
- 修正列地址映射公式: col = col_key + bitflip_position // 64
- 支持单个时间点和批量生成(--all)功能
- 更新.gitignore以自动跟踪重要的测试和分析文件

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,20 @@ liblitespi.a
 # 保留重要的测试结果文件但忽略其他结果文件夹中的临时文件
 # rowhammer_tester/scripts/result/ 目录下的 .txt 文件会被保留
 
+# 自动跟踪测试数据和分析结果
+!rowhammer_tester/scripts/result/**/*.json
+!rowhammer_tester/scripts/result/**/*.csv
+!rowhammer_tester/scripts/result/**/*.py
+!rowhammer_tester/scripts/result/**/*.png
+!rowhammer_tester/scripts/result/**/*.pdf
+
+# 忽略临时和缓存文件
+rowhammer_tester/scripts/result/**/*.tmp
+rowhammer_tester/scripts/result/**/*.log
+
+# 在根目录自动跟踪分析脚本
+!*.py
+
 
 
 
